# ezgatr

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  release.yml  test.yml
docs/: ezgatr.html  index.html  search.js
docs/ezgatr/: interfaces.html  nets.html  nn.html  utils.html
docs/ezgatr/interfaces/: plane.html  point.html  pseudoscalar.html  reflection.html  rotation.html  scalar.html  translation.html
docs/ezgatr/nets/: mv_only_gatr.html
docs/ezgatr/nn/: functional.html  modules.html
docs/ezgatr/nn/functional/: dual.html
docs/ezgatr/utils/: debug.html  logger.html
docs/theme/: theme.css
notebooks/: 0-playground.ipynb
src/ezgatr/: __init__.py
src/ezgatr/blocks/: mlp.py
src/ezgatr/interfaces/: __init__  __init__.py  plane.py  point.py  pseudoscalar.py  reflection.py  rotation.py  scalar.py  translation.py
src/ezgatr/nets/: mv_only_gatr.py
src/ezgatr/nn/: __init__.py  linear.py
src/ezgatr/nn/functional/: __init__.py  activation.py  attention.py  bilinear.py  dual.py  linear.py  norm.py
src/ezgatr/nn/functional/basis/: geometric_product.pt
src/ezgatr/nn/modules/: __init__.py  linear.py  norm.py
src/ezgatr/primitives/: bilinear.py  dual.py  linear.py  norm.py
src/ezgatr/primitives/basis/: outer_product.pt
src/ezgatr/utils/: _encode.py  debug.py  encode.py
src/ezgatr/utils/data/: encode.py
src/ggatr/: _selector.py
src/sim_gatr/basis/: geometric_product.pt  outer_product.pt
tests/: README.md  conftest.py  helpers.py  test_functional.py  utils.py
tests/config/: __init__.py  core.toml  interfaces.toml
tests/interfaces/: test_plane.py  test_point.py
tests/nn/: test_functional.py  test_regress_other_impl.py
tests/thematic/: README.md  test_regress_with_clifford.py
